# utility-manager

./: .env.example  .gitattributes  .gitignore  AUTOMATION_TEMPLATE.md  AUTOMATION_VISUALSERVICE_KVARTPLATA.md  AUTOMATION_VODOKANAL_IF_WATER.md  BILLING_SNAPSHOT_SPEC.md  PROJECT_DOCUMENTATION.md  README.md  TODO.md  docker-compose.nas.yml  docker-compose.yml  package.json
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260220_01_p1_indexes_and_personal_account.py  20260220_02_admin_roles.py  20260221_01_admin_password_rotation.py  20260221_02_billing_change_log.py  20260221_03_meter_registers_and_tariff_meter_binding.py  20260223_01_service_ledger_entries.py  20260223_02_provider_import_staging.py  20260223_03_apartment_passport_and_equipment.py  20260223_04_meter_lifecycle_fields.py  20260223_05_tenant_email.py  20260223_06_tenant_portal_fields.py  20260224_07_tenant_session_version.py  20260302_08_utility_payment_source.py  20260303_09_tariff_auto_check_fields.py  20260307_10_providers.py  20260307_11_registered_residents.py  20260307_12_tariff_fixed_formula.py
backend/app/: main.py  schemas.py
backend/app/api/: admin.py  auth.py  deps.py  tenant.py
backend/app/core/: auth.py  config.py  security.py
backend/app/db/: migrations.py  session.py
backend/app/models/: __init__.py  entities.py
backend/scripts/: import_from_excel.py
backend/tests/: conftest.py  test_billing_snapshots.py  test_p0_stability.py  test_tariff_auto_check_helpers.py  test_v1_flow.py
(+117 files in other folders)
