[project]
name = "utility-manager-backend"
version = "1.0.0"
description = "UtilityManager backend for apartment utility billing."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pymysql",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "openpyxl",
    "cryptography",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

